--- a/style.css
+++ b/style.css
@@ -234,19 +234,22 @@ transition: .5s ease;
 }
 .portfolio-box img{
     width: 100%;
+    
    transition: .5s ease; 
 }
 .portfolio-box:hover img{
     transform: scale(1.1);
 
 }
-
+.portfolio-layer{
+    height: 150px;
+}
 .portfolio-box .portfolio-layer{
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 250px;
     background: linear-gradient(rgba(0,0,0,.1),var(--main-color));
     display: flex;
     justify-content: center;
@@ -262,18 +265,20 @@ transition: .5s ease;
 
 }
 .portfolio-layer h4{
-    font-size: 3rem;
+    padding-top: 20px;
+    font-size: 2.5rem;
 
 }
 .portfolio-layer p{
     font-size: 1.6rem;
-    margin: .3rem 0 1rem;
+    margin: .1rem 0 1rem;
 }
 .portfolio-layer a{
+    
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 5rem;
+    width: 7rem;
     height: 5rem;
     background: var(--text-color);
     border-radius: 50%;
